<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Jeremy James on 6/16/20 10:35 AM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 6/6/20 12:28 PM
  ~  */
  -->

<layout>
    <data>
        <variable type="xyz.james.home.viewmodels.PatientViewModel" name="patientViewModel"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/conditions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_condition_type1_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type 1 Diabetes"
                android:checked="@={patientViewModel.chkMedicalType1Diabetes}"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_condition_type2_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Type 2 Diabetes"
                android:checked="@={patientViewModel.chkMedicalType2Diabetes}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_condition_hypertension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hypertension"
                android:checked="@={patientViewModel.chkMedicalHypertension}"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chk_condition_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="@string/heart_disease"
                android:checked="@={patientViewModel.chkMedicalHeartDisease}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPostalAddress"
                android:text="@={patientViewModel.medicalOther}"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>